--- a/html/image.html
+++ b/html/image.html
@@ -2,9 +2,9 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
-    <title>Привет, HTML!</title>
+    <title>Вставка изображения</title>
   </head>
   <body>
-    Привет, HTML!
+    <ima src="" />
   </body>
 </html>
