Глава 17: завершение черновика

--- a/html/image_height.html
+++ b/html/image_height.html
@@ -5,6 +5,6 @@
     <title>Вставка изображения</title>
   </head>
   <body>
-    <img src="php.png" />
+    <img src="php.png" height="200" />
   </body>
 </html>
