--- a/html/meta.html
+++ b/html/meta.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <title>Привет, HTML!</title>
     <meta name="description" content="Тестовая страница" />
-    <meta name="keywords" content="Hello world, HTML, PHP, веб-программирование" />
+    <meta name="keywords"
+          content="Hello world, HTML, PHP, веб-программирование" />
   </head>
   <body>
     Привет, HTML!
