--- a/html/style.html
+++ b/html/style.html
@@ -5,6 +5,8 @@
     <title>Использование CSS</title>
   </head>
   <body>
-    <h1 style="text-align: center; font-size: 20px;">Язык разметки HTML</h1>
+    <h1 style="text-align: center; font-size: 20px;">
+      Язык разметки HTML
+    </h1>
   </body>
 </html>
