--- a/forms/form_checkbox.html
+++ b/forms/form_checkbox.html
@@ -6,10 +6,14 @@
 </head>
 <body>
   <form method='post' action='form_hidden_handler.php'>
-    <input type='checkbox' name='php' checked />Вы знакомы с PHP?<br />
-    <input type='checkbox' name='phyton' checked />Вы знакомы с Python?<br />
-    <input type='checkbox' name='ruby' />Вы знакомы с Ruby?<br />
-    <input type='checkbox' name='javascript' />Вы знакомы с JavaScript?<br />
+    <input type='checkbox' name='php' checked />
+    Вы знакомы с PHP?<br />
+    <input type='checkbox' name='phyton' checked />
+    Вы знакомы с Python?<br />
+    <input type='checkbox' name='ruby' />
+    Вы знакомы с Ruby?<br />
+    <input type='checkbox' name='javascript' />
+    Вы знакомы с JavaScript?<br />
     <input type='submit' value='Отправить' />
   </form>
 </body>
